--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
     <!-- Add Ad Modal -->
     <div id="adModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4 backdrop-blur-sm">
-        <div class="bg-white rounded-2xl w-full max-w-lg shadow-2xl transform transition-all scale-100">
-            <div class="p-6 border-b border-gray-100 flex justify-between items-center">
+        <div class="bg-white rounded-2xl w-full max-w-lg shadow-2xl transform transition-all scale-100 max-h-[90vh] overflow-y-auto">
+            <div class="p-6 border-b border-gray-100 flex justify-between items-center sticky top-0 bg-white z-10">
                 <h3 class="text-xl font-bold text-gray-900">نشر إعلان جديد</h3>
                 <button id="closeModalBtn" class="text-gray-400 hover:text-gray-600">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
@@ -83,6 +83,31 @@
             </div>
             <div class="p-6">
                 <form id="adForm" class="space-y-4">
+                    
+                    <!-- Image Upload -->
+                    <div class="w-full">
+                        <label class="block text-sm font-medium text-gray-700 mb-2">صورة الإعلان</label>
+                        <div class="relative border-2 border-dashed border-gray-300 rounded-lg p-6 hover:border-indigo-500 transition text-center cursor-pointer" id="dropZone">
+                            <input type="file" id="imageInput" name="image" accept="image/*" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer">
+                            <div class="space-y-1" id="uploadPrompt">
+                                <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                                    <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                <div class="text-sm text-gray-600">
+                                    <span class="font-medium text-indigo-600 hover:text-indigo-500">اضغط للتحميل</span>
+                                    <span>أو اسحب الصورة هنا</span>
+                                </div>
+                                <p class="text-xs text-gray-500">PNG, JPG, GIF حتى 5MB</p>
+                            </div>
+                            <div id="imagePreview" class="hidden h-40 w-full mx-auto relative">
+                                <img src="" alt="Preview" class="h-full w-full object-contain rounded-md">
+                                <button type="button" id="removeImage" class="absolute top-0 right-0 -mt-2 -mr-2 bg-red-500 text-white rounded-full p-1 shadow hover:bg-red-600">
+                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">عنوان الإعلان</label>
                         <input type="text" name="title" required placeholder="مثال: سيارة تويوتا كامري 2020" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none">
@@ -101,6 +126,7 @@
                                 <option value="إلكترونيات">إلكترونيات</option>
                                 <option value="أثاث">أثاث</option>
                                 <option value="خدمات">خدمات</option>
+                                <option value="وظائف">وظائف</option>
                             </select>
                         </div>
                     </div>
@@ -120,6 +146,16 @@
                     </button>
                 </form>
             </div>
+        </div>
+    </div>
+
+    <!-- Toast Notification -->
+    <div id="toast" class="fixed bottom-5 left-5 transform translate-y-20 opacity-0 transition-all duration-300 z-50">
+        <div class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3">
+            <div class="bg-green-500 rounded-full p-1">
+                <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg>
+            </div>
+            <span class="font-medium">تم نشر إعلانك بنجاح!</span>
         </div>
     </div>
 
